feat: add react-parallax-tilt and postcss

--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "eslint-config-next": "13.2.4",
     "json-server": "^0.17.2",
     "next": "13.2.4",
+    "postcss-import": "^15.1.0",
+    "postcss-nesting": "^11.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-parallax-tilt": "^1.7.118",
     "swr": "^2.1.0",
     "typescript": "5.0.2"
   },
@@ -33,6 +36,7 @@
     "lint-staged": "^13.2.0",
     "postcss": "^8.4.21",
     "prettier": "^2.8.4",
+    "sass": "^1.59.3",
     "tailwindcss": "^3.2.7"
   }
 }
